y.output
Non-terminaux inutiles dans la grammaire

   DVAR
   DVARS


Terminaux inutilisés dans la grammaire

   tFIN
   tNULL
   tNOM
   tPOW


État 51 conflits: 1 décalage/réduction
État 74 conflits: 4 décalage/réduction


Grammaire

    0 $accept: S $end

    1 S: MAIN

    2 MAIN: TYPE tMAIN tPARo LVAR tPARf tACCo BODY tACCf

    3 TYPE: tINT
    4     | tFLOAT
    5     | tCHAR
    6     | tVOID

    7 BODY: DECLARATION INSTRUCT

    8 LVAR: %empty
    9     | tVAR LVARS

   10 LVARS: %empty
   11      | tVIRG tVAR LVARS

   12 DECLARATION: %empty
   13            | TYPE tVAR tPTvirg DECLARATION
   14            | tCONST TYPE tVAR tPTvirg DECLARATION
   15            | TYPE tVAR tEQ VAL tPTvirg DECLARATION
   16            | TYPE tVAR tVIRGULE SuiteVar

   17 SuiteVar: tVAR tVIRGULE SuiteVar
   18         | tVAR tPTvirg

   19 INSTRUCT: %empty
   20         | tVAR tEQ EXPRESSION tPTvirg INSTRUCT
   21         | tPRINTF tPARo EXPRESSION tPARf tPTvirg INSTRUCT
   22         | PRINT INSTRUCT

   23 PRINT: tPRINTF tPARo tVAR tPARf tPTvirg

   24 EXPRESSION: tNB
   25           | tEXPO
   26           | tREAL
   27           | tVAR
   28           | tPARo EXPRESSION tPARf
   29           | EXPRESSION OPE EXPRESSION
   30           | tSUB EXPRESSION

   31 OPE: tADD
   32    | tSUB
   33    | tMUL
   34    | tDIV

   35 VAL: tNB
   36    | tREAL
   37    | tEXPO
   38    | tVAR


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 2
tFIN (259)
tCONST (260) 14
tVOID (261) 6
tINT (262) 3
tCHAR (263) 5
tFLOAT (264) 4
tPRINTF (265) 21 23
tEQ (266) 15 20
tADD (267) 31
tSUB (268) 30 32
tMUL (269) 33
tDIV (270) 34
tVIRG (271) 11
tPTvirg (272) 13 14 15 18 20 21 23
tPARo (273) 2 21 23 28
tPARf (274) 2 21 23 28
tACCo (275) 2
tACCf (276) 2
tNULL (277)
tREAL (278) 26 36
tEXPO (279) 25 37
tNOM (280)
tVIRGULE (281) 16 17
tNB (282) 24 35
tVAR (283) 9 11 13 14 15 16 17 18 20 23 27 38
tPOW (284)


Non-terminaux, suivis des règles où ils apparaissent

$accept (30)
    à gauche: 0
S (31)
    à gauche: 1, à droite: 0
MAIN (32)
    à gauche: 2, à droite: 1
TYPE (33)
    à gauche: 3 4 5 6, à droite: 2 13 14 15 16
BODY (34)
    à gauche: 7, à droite: 2
LVAR (35)
    à gauche: 8 9, à droite: 2
LVARS (36)
    à gauche: 10 11, à droite: 9 11
DECLARATION (37)
    à gauche: 12 13 14 15 16, à droite: 7 13 14 15
SuiteVar (38)
    à gauche: 17 18, à droite: 16 17
INSTRUCT (39)
    à gauche: 19 20 21 22, à droite: 7 20 21 22
PRINT (40)
    à gauche: 23, à droite: 22
EXPRESSION (41)
    à gauche: 24 25 26 27 28 29 30, à droite: 20 21 28 29 30
OPE (42)
    à gauche: 31 32 33 34, à droite: 29
VAL (43)
    à gauche: 35 36 37 38, à droite: 15


État 0

    0 $accept: . S $end

    tVOID   décalage et aller à l'état 1
    tINT    décalage et aller à l'état 2
    tCHAR   décalage et aller à l'état 3
    tFLOAT  décalage et aller à l'état 4

    S     aller à l'état 5
    MAIN  aller à l'état 6
    TYPE  aller à l'état 7


État 1

    6 TYPE: tVOID .

    $défaut  réduction par utilisation de la règle 6 (TYPE)


État 2

    3 TYPE: tINT .

    $défaut  réduction par utilisation de la règle 3 (TYPE)


État 3

    5 TYPE: tCHAR .

    $défaut  réduction par utilisation de la règle 5 (TYPE)


État 4

    4 TYPE: tFLOAT .

    $défaut  réduction par utilisation de la règle 4 (TYPE)


État 5

    0 $accept: S . $end

    $end  décalage et aller à l'état 8


État 6

    1 S: MAIN .

    $défaut  réduction par utilisation de la règle 1 (S)


État 7

    2 MAIN: TYPE . tMAIN tPARo LVAR tPARf tACCo BODY tACCf

    tMAIN  décalage et aller à l'état 9


État 8

    0 $accept: S $end .

    $défaut  accepter


État 9

    2 MAIN: TYPE tMAIN . tPARo LVAR tPARf tACCo BODY tACCf

    tPARo  décalage et aller à l'état 10


État 10

    2 MAIN: TYPE tMAIN tPARo . LVAR tPARf tACCo BODY tACCf

    tVAR  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 8 (LVAR)

    LVAR  aller à l'état 12


État 11

    9 LVAR: tVAR . LVARS

    tVIRG  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 10 (LVARS)

    LVARS  aller à l'état 14


État 12

    2 MAIN: TYPE tMAIN tPARo LVAR . tPARf tACCo BODY tACCf

    tPARf  décalage et aller à l'état 15


État 13

   11 LVARS: tVIRG . tVAR LVARS

    tVAR  décalage et aller à l'état 16


État 14

    9 LVAR: tVAR LVARS .

    $défaut  réduction par utilisation de la règle 9 (LVAR)


État 15

    2 MAIN: TYPE tMAIN tPARo LVAR tPARf . tACCo BODY tACCf

    tACCo  décalage et aller à l'état 17


État 16

   11 LVARS: tVIRG tVAR . LVARS

    tVIRG  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 10 (LVARS)

    LVARS  aller à l'état 18


État 17

    2 MAIN: TYPE tMAIN tPARo LVAR tPARf tACCo . BODY tACCf

    tCONST  décalage et aller à l'état 19
    tVOID   décalage et aller à l'état 1
    tINT    décalage et aller à l'état 2
    tCHAR   décalage et aller à l'état 3
    tFLOAT  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 12 (DECLARATION)

    TYPE         aller à l'état 20
    BODY         aller à l'état 21
    DECLARATION  aller à l'état 22


État 18

   11 LVARS: tVIRG tVAR LVARS .

    $défaut  réduction par utilisation de la règle 11 (LVARS)


État 19

   14 DECLARATION: tCONST . TYPE tVAR tPTvirg DECLARATION

    tVOID   décalage et aller à l'état 1
    tINT    décalage et aller à l'état 2
    tCHAR   décalage et aller à l'état 3
    tFLOAT  décalage et aller à l'état 4

    TYPE  aller à l'état 23


État 20

   13 DECLARATION: TYPE . tVAR tPTvirg DECLARATION
   15            | TYPE . tVAR tEQ VAL tPTvirg DECLARATION
   16            | TYPE . tVAR tVIRGULE SuiteVar

    tVAR  décalage et aller à l'état 24


État 21

    2 MAIN: TYPE tMAIN tPARo LVAR tPARf tACCo BODY . tACCf

    tACCf  décalage et aller à l'état 25


État 22

    7 BODY: DECLARATION . INSTRUCT

    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 19 (INSTRUCT)

    INSTRUCT  aller à l'état 28
    PRINT     aller à l'état 29


État 23

   14 DECLARATION: tCONST TYPE . tVAR tPTvirg DECLARATION

    tVAR  décalage et aller à l'état 30


État 24

   13 DECLARATION: TYPE tVAR . tPTvirg DECLARATION
   15            | TYPE tVAR . tEQ VAL tPTvirg DECLARATION
   16            | TYPE tVAR . tVIRGULE SuiteVar

    tEQ       décalage et aller à l'état 31
    tPTvirg   décalage et aller à l'état 32
    tVIRGULE  décalage et aller à l'état 33


État 25

    2 MAIN: TYPE tMAIN tPARo LVAR tPARf tACCo BODY tACCf .

    $défaut  réduction par utilisation de la règle 2 (MAIN)


État 26

   21 INSTRUCT: tPRINTF . tPARo EXPRESSION tPARf tPTvirg INSTRUCT
   23 PRINT: tPRINTF . tPARo tVAR tPARf tPTvirg

    tPARo  décalage et aller à l'état 34


État 27

   20 INSTRUCT: tVAR . tEQ EXPRESSION tPTvirg INSTRUCT

    tEQ  décalage et aller à l'état 35


État 28

    7 BODY: DECLARATION INSTRUCT .

    $défaut  réduction par utilisation de la règle 7 (BODY)


État 29

   22 INSTRUCT: PRINT . INSTRUCT

    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 19 (INSTRUCT)

    INSTRUCT  aller à l'état 36
    PRINT     aller à l'état 29


État 30

   14 DECLARATION: tCONST TYPE tVAR . tPTvirg DECLARATION

    tPTvirg  décalage et aller à l'état 37


État 31

   15 DECLARATION: TYPE tVAR tEQ . VAL tPTvirg DECLARATION

    tREAL  décalage et aller à l'état 38
    tEXPO  décalage et aller à l'état 39
    tNB    décalage et aller à l'état 40
    tVAR   décalage et aller à l'état 41

    VAL  aller à l'état 42


État 32

   13 DECLARATION: TYPE tVAR tPTvirg . DECLARATION

    tCONST  décalage et aller à l'état 19
    tVOID   décalage et aller à l'état 1
    tINT    décalage et aller à l'état 2
    tCHAR   décalage et aller à l'état 3
    tFLOAT  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 12 (DECLARATION)

    TYPE         aller à l'état 20
    DECLARATION  aller à l'état 43


État 33

   16 DECLARATION: TYPE tVAR tVIRGULE . SuiteVar

    tVAR  décalage et aller à l'état 44

    SuiteVar  aller à l'état 45


État 34

   21 INSTRUCT: tPRINTF tPARo . EXPRESSION tPARf tPTvirg INSTRUCT
   23 PRINT: tPRINTF tPARo . tVAR tPARf tPTvirg

    tSUB   décalage et aller à l'état 46
    tPARo  décalage et aller à l'état 47
    tREAL  décalage et aller à l'état 48
    tEXPO  décalage et aller à l'état 49
    tNB    décalage et aller à l'état 50
    tVAR   décalage et aller à l'état 51

    EXPRESSION  aller à l'état 52


État 35

   20 INSTRUCT: tVAR tEQ . EXPRESSION tPTvirg INSTRUCT

    tSUB   décalage et aller à l'état 46
    tPARo  décalage et aller à l'état 47
    tREAL  décalage et aller à l'état 48
    tEXPO  décalage et aller à l'état 49
    tNB    décalage et aller à l'état 50
    tVAR   décalage et aller à l'état 53

    EXPRESSION  aller à l'état 54


État 36

   22 INSTRUCT: PRINT INSTRUCT .

    $défaut  réduction par utilisation de la règle 22 (INSTRUCT)


État 37

   14 DECLARATION: tCONST TYPE tVAR tPTvirg . DECLARATION

    tCONST  décalage et aller à l'état 19
    tVOID   décalage et aller à l'état 1
    tINT    décalage et aller à l'état 2
    tCHAR   décalage et aller à l'état 3
    tFLOAT  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 12 (DECLARATION)

    TYPE         aller à l'état 20
    DECLARATION  aller à l'état 55


État 38

   36 VAL: tREAL .

    $défaut  réduction par utilisation de la règle 36 (VAL)


État 39

   37 VAL: tEXPO .

    $défaut  réduction par utilisation de la règle 37 (VAL)


État 40

   35 VAL: tNB .

    $défaut  réduction par utilisation de la règle 35 (VAL)


État 41

   38 VAL: tVAR .

    $défaut  réduction par utilisation de la règle 38 (VAL)


État 42

   15 DECLARATION: TYPE tVAR tEQ VAL . tPTvirg DECLARATION

    tPTvirg  décalage et aller à l'état 56


État 43

   13 DECLARATION: TYPE tVAR tPTvirg DECLARATION .

    $défaut  réduction par utilisation de la règle 13 (DECLARATION)


État 44

   17 SuiteVar: tVAR . tVIRGULE SuiteVar
   18         | tVAR . tPTvirg

    tPTvirg   décalage et aller à l'état 57
    tVIRGULE  décalage et aller à l'état 58


État 45

   16 DECLARATION: TYPE tVAR tVIRGULE SuiteVar .

    $défaut  réduction par utilisation de la règle 16 (DECLARATION)


État 46

   30 EXPRESSION: tSUB . EXPRESSION

    tSUB   décalage et aller à l'état 46
    tPARo  décalage et aller à l'état 47
    tREAL  décalage et aller à l'état 48
    tEXPO  décalage et aller à l'état 49
    tNB    décalage et aller à l'état 50
    tVAR   décalage et aller à l'état 53

    EXPRESSION  aller à l'état 59


État 47

   28 EXPRESSION: tPARo . EXPRESSION tPARf

    tSUB   décalage et aller à l'état 46
    tPARo  décalage et aller à l'état 47
    tREAL  décalage et aller à l'état 48
    tEXPO  décalage et aller à l'état 49
    tNB    décalage et aller à l'état 50
    tVAR   décalage et aller à l'état 53

    EXPRESSION  aller à l'état 60


État 48

   26 EXPRESSION: tREAL .

    $défaut  réduction par utilisation de la règle 26 (EXPRESSION)


État 49

   25 EXPRESSION: tEXPO .

    $défaut  réduction par utilisation de la règle 25 (EXPRESSION)


État 50

   24 EXPRESSION: tNB .

    $défaut  réduction par utilisation de la règle 24 (EXPRESSION)


État 51

   23 PRINT: tPRINTF tPARo tVAR . tPARf tPTvirg
   27 EXPRESSION: tVAR .

    tPARf  décalage et aller à l'état 61

    tPARf     [réduction par utilisation de la règle 27 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 27 (EXPRESSION)


État 52

   21 INSTRUCT: tPRINTF tPARo EXPRESSION . tPARf tPTvirg INSTRUCT
   29 EXPRESSION: EXPRESSION . OPE EXPRESSION

    tADD   décalage et aller à l'état 62
    tSUB   décalage et aller à l'état 63
    tMUL   décalage et aller à l'état 64
    tDIV   décalage et aller à l'état 65
    tPARf  décalage et aller à l'état 66

    OPE  aller à l'état 67


État 53

   27 EXPRESSION: tVAR .

    $défaut  réduction par utilisation de la règle 27 (EXPRESSION)


État 54

   20 INSTRUCT: tVAR tEQ EXPRESSION . tPTvirg INSTRUCT
   29 EXPRESSION: EXPRESSION . OPE EXPRESSION

    tADD     décalage et aller à l'état 62
    tSUB     décalage et aller à l'état 63
    tMUL     décalage et aller à l'état 64
    tDIV     décalage et aller à l'état 65
    tPTvirg  décalage et aller à l'état 68

    OPE  aller à l'état 67


État 55

   14 DECLARATION: tCONST TYPE tVAR tPTvirg DECLARATION .

    $défaut  réduction par utilisation de la règle 14 (DECLARATION)


État 56

   15 DECLARATION: TYPE tVAR tEQ VAL tPTvirg . DECLARATION

    tCONST  décalage et aller à l'état 19
    tVOID   décalage et aller à l'état 1
    tINT    décalage et aller à l'état 2
    tCHAR   décalage et aller à l'état 3
    tFLOAT  décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 12 (DECLARATION)

    TYPE         aller à l'état 20
    DECLARATION  aller à l'état 69


État 57

   18 SuiteVar: tVAR tPTvirg .

    $défaut  réduction par utilisation de la règle 18 (SuiteVar)


État 58

   17 SuiteVar: tVAR tVIRGULE . SuiteVar

    tVAR  décalage et aller à l'état 44

    SuiteVar  aller à l'état 70


État 59

   29 EXPRESSION: EXPRESSION . OPE EXPRESSION
   30           | tSUB EXPRESSION .

    $défaut  réduction par utilisation de la règle 30 (EXPRESSION)

    OPE  aller à l'état 67


État 60

   28 EXPRESSION: tPARo EXPRESSION . tPARf
   29           | EXPRESSION . OPE EXPRESSION

    tADD   décalage et aller à l'état 62
    tSUB   décalage et aller à l'état 63
    tMUL   décalage et aller à l'état 64
    tDIV   décalage et aller à l'état 65
    tPARf  décalage et aller à l'état 71

    OPE  aller à l'état 67


État 61

   23 PRINT: tPRINTF tPARo tVAR tPARf . tPTvirg

    tPTvirg  décalage et aller à l'état 72


État 62

   31 OPE: tADD .

    $défaut  réduction par utilisation de la règle 31 (OPE)


État 63

   32 OPE: tSUB .

    $défaut  réduction par utilisation de la règle 32 (OPE)


État 64

   33 OPE: tMUL .

    $défaut  réduction par utilisation de la règle 33 (OPE)


État 65

   34 OPE: tDIV .

    $défaut  réduction par utilisation de la règle 34 (OPE)


État 66

   21 INSTRUCT: tPRINTF tPARo EXPRESSION tPARf . tPTvirg INSTRUCT

    tPTvirg  décalage et aller à l'état 73


État 67

   29 EXPRESSION: EXPRESSION OPE . EXPRESSION

    tSUB   décalage et aller à l'état 46
    tPARo  décalage et aller à l'état 47
    tREAL  décalage et aller à l'état 48
    tEXPO  décalage et aller à l'état 49
    tNB    décalage et aller à l'état 50
    tVAR   décalage et aller à l'état 53

    EXPRESSION  aller à l'état 74


État 68

   20 INSTRUCT: tVAR tEQ EXPRESSION tPTvirg . INSTRUCT

    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 19 (INSTRUCT)

    INSTRUCT  aller à l'état 75
    PRINT     aller à l'état 29


État 69

   15 DECLARATION: TYPE tVAR tEQ VAL tPTvirg DECLARATION .

    $défaut  réduction par utilisation de la règle 15 (DECLARATION)


État 70

   17 SuiteVar: tVAR tVIRGULE SuiteVar .

    $défaut  réduction par utilisation de la règle 17 (SuiteVar)


État 71

   28 EXPRESSION: tPARo EXPRESSION tPARf .

    $défaut  réduction par utilisation de la règle 28 (EXPRESSION)


État 72

   23 PRINT: tPRINTF tPARo tVAR tPARf tPTvirg .

    $défaut  réduction par utilisation de la règle 23 (PRINT)


État 73

   21 INSTRUCT: tPRINTF tPARo EXPRESSION tPARf tPTvirg . INSTRUCT

    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 19 (INSTRUCT)

    INSTRUCT  aller à l'état 76
    PRINT     aller à l'état 29


État 74

   29 EXPRESSION: EXPRESSION . OPE EXPRESSION
   29           | EXPRESSION OPE EXPRESSION .

    tADD  décalage et aller à l'état 62
    tSUB  décalage et aller à l'état 63
    tMUL  décalage et aller à l'état 64
    tDIV  décalage et aller à l'état 65

    tADD      [réduction par utilisation de la règle 29 (EXPRESSION)]
    tSUB      [réduction par utilisation de la règle 29 (EXPRESSION)]
    tMUL      [réduction par utilisation de la règle 29 (EXPRESSION)]
    tDIV      [réduction par utilisation de la règle 29 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 29 (EXPRESSION)

    OPE  aller à l'état 67


État 75

   20 INSTRUCT: tVAR tEQ EXPRESSION tPTvirg INSTRUCT .

    $défaut  réduction par utilisation de la règle 20 (INSTRUCT)


État 76

   21 INSTRUCT: tPRINTF tPARo EXPRESSION tPARf tPTvirg INSTRUCT .

    $défaut  réduction par utilisation de la règle 21 (INSTRUCT)
